--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,7 @@ langchain==1.1.0
 pgvector==0.3.1
 psycopg2-binary==2.9.9
 pydantic==2.12.4
+
+## STREAMLIT
+streamlit==1.51.0
+streamlit-authenticator==0.4.2
